# reesinkgive

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_reesinkgive.py  metadata.json  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cldf/: README.md  cldf-metadata.json  codes.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: codes.csv  parameters.csv  source_assocs.csv  sources.bib
raw/: README.md  Reesink2013.csv  Reesink2013_modified.Sheet1.csv  Reesink2013_modified.xlsx
